# flask-ml-serving

./: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
